  constructors failed with an `IndexOutOfRange` exception when the file/stream
  was empty and encoding detection was not turned off
  (reported by Vesa Karvonen - thanks Vesa!).
- In previous FParsec versions the `NumberLiteral.String` returned by the
  `numberLiteral` parser included parsed suffix chars despite the
  documentation claiming the opposite. (The testing code was buggy too.)

Other breaking changes:
- renamed the module `CharParser` to `CharParsers`
- moved `CharParser.OperatorPrecedenceParser` into separate module

- FParsec.Primitives:
  * (SUBTLE CHANGE) renamed `message` to `fail` and `fail` to `failFatally`
  * renamed `pair`, `triple` and `quad` to `tuple2`, `tuple3` and `tuple4`
  * renamed `manyFoldLeft` to `manyFold` and changed the
    argument order of the accumulator and function argument
  * removed `manyFoldRight`
  * renamed `count` to `parray` and changed the return type,
    renamed `skipCount` to `skipArray`
  * renamed `followedBy` and `notFollowedBy` to `followedByL` and
    `notFollowedByL` and introduced `followedBy` and `notFollowedBy` functions
    that take no second argument
  * moved `ParserResult<_>` to `CharParsers` and changed constructor arguments
  * removed applyParser
  * removed `|>>=`, now `>>=` automatically uses an optimized branch for
    uncurried functions
  * removed `endBy` and `endBy1` (`endBy p sep` can be replaced with
    `many (p .>> sep)` and `endBy1 p sep` with `many1 (p .>> sep)`)

- FParsec.CharParsers:
  * removed `applyParser` from the public interface
  * removed `getIndex`, `skip`, `registerNL`, `extract`, `regexp`
    (these low-level operations should be done directly through the
    `State<_>`/`CharStream.Iterator` interface)
  * removed `anyCharOrNL` (no longer needed, see design changes above)
  * removed `nSatisfy` (can be replaced with `manySatisfyMinMax`)
  * removed `unicodeDigit` and `unicodeNumber` (can be replaced with